--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "15.3.4",
     "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "open-graph-scraper": "^6.10.0",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
